Fix locations service areas spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3576,6 +3576,10 @@ label {
   overflow: hidden;
 }
 
+.cs_nearby_areas_section {
+  padding: 0 18px;
+}
+
 /*==============================================================
   12. Hero
  ===============================================================*/
